--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>guaman</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+    <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#4c4564">
+    <meta name="msapplication-TileColor" content="#4c4564">
+    <meta name="theme-color" content="#4c4564">
+    <title>Jaime Guamán - Desarrollador Web FrontEnd</title>
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700|Vidaloka" rel="stylesheet">
   </head>
   <body>
     <noscript>
