--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Jaime Guamán - Desarrollador Web FrontEnd</title>
+    <meta name="title" content="Jaime Guaman - Desarrollador Web Front End">
+    <meta name="description" content="Más de 6 años de experiencia en desarrollo de sitios y aplicaciones web multi-dispositivo.">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Jaime Guaman">
+    <meta itemprop="name" content="Jaime Guaman - Desarrollador Web ">
+    <meta itemprop="description" content="Más de 6 años de experiencia en desarrollo de sitios y aplicaciones web multi-dispositivo.">
+    <meta itemprop="image" content="http://guaman.cl/image.png">
+    <meta name="og:title" content="Jaime Guaman - Desarrollador Web ">
+    <meta name="og:description" content="Más de 6 años de experiencia en desarrollo de sitios y aplicaciones web multi-dispositivo.">
+    <meta name="og:image" content="http://guaman.cl/image.png">
+    <meta name="og:url" content="http://guaman.cl">
+    <meta name="og:site_name" content="Jaime Guaman - Desarrollador Web Front End">
+    <meta name="og:locale" content="es">
+    <meta name="og:type" content="website">
+    <meta name="msapplication-TileColor" content="#4c4564">
+    <meta name="theme-color" content="#4c4564">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
     <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#4c4564">
-    <meta name="msapplication-TileColor" content="#4c4564">
-    <meta name="theme-color" content="#4c4564">
-    <title>Jaime Guamán - Desarrollador Web FrontEnd</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700|Vidaloka" rel="stylesheet">
   </head>
   <body>
